# tuple

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/fcc/: invoke.hpp  tuple.hpp
include/fcc/detail/: allocator_concept.hpp  generic_traits.hpp  literals.hpp  returns.hpp  static_const.hpp  swap_helper.hpp
include/fcc/support/: c_array.hpp  empty.hpp  std_array.hpp
include/fcc/tuple/: tuple_algorithm.hpp  tuple_creation.hpp  tuple_element_access.hpp  tuple_helpers.hpp  tuple_impl.hpp  tuple_io.hpp  tuple_leaf.hpp  tuple_operator.hpp  tuple_traits.hpp
include/meta/: meta.hpp
src/: config.hpp  main.cpp  playground.cpp
test/: CMakeLists.txt  assignment.cpp  braced_init_constructors.cpp  creation.cpp  get.cpp  io.cpp  operator.cpp  perfect_forwarding_constructors.cpp  piecewise_forwarding_constructors.cpp  simple_test.hpp  swap.cpp  test_types.hpp  tuple_forwarding_constructors.cpp
